--- a/templates/index2.html
+++ b/templates/index2.html
@@ -23,7 +23,9 @@
 	<div class="row">
 		<div class="col-md-12">
 			<div class="dropdown">
-                <select id="selDataset" onchange = "optionChanged(this.value)"></select>
+                <select id="departmentdropdown" onchange = "optionChanged(this.value)"></select>
+				<select id="roledropdown" onchange = "optionChanged(this.value)"></select>
+				<select id="educFieldDropdown" onchange = "optionChanged(this.value)"></select>
 				<button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown">
 					Action
 				</button>
@@ -49,7 +51,7 @@
 						<img class="d-block w-100" alt="Carousel Bootstrap First" src="https://www.layoutit.com/img/sports-q-c-1600-500-1.jpg" />
 						<div class="carousel-caption">
 							<h4>
-								First Thumbnail label
+								HELLO! THIS IS A TEST!!! First Thumbnail label
 							</h4>
 							<p>
 								Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
@@ -668,5 +670,5 @@
 			<img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg" /><img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg" /><img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg" />
 		</div>
     </div>
-    <script src="static/js/VisualizationStarter.js"></script>
+    
 </div>
