Adding updated web template and supporting files

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,1 +1,6 @@
-/* Your custom CSS here */
+.carousel-item img {
+    max-height: 400px;
+    width: auto;
+    min-width: auto;
+    object-fit: cover;
+  }
