--- a/templates/index.html
+++ b/templates/index.html
@@ -1,67 +1,127 @@
-<!DOCTYPE html>
 <html>
-<head>
-  <title>Human Resources Analysis</title>
+    <head>
+        <title></title>
+        <!-- Bootstrap CSS & JS-->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 
-  <!-- Bootstrap CSS and JS-->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
 
+        <!-- Plotly JS -->
+        <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 
-  
-  <!-- D3 JS -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
+        <!-- Custom CSS & JS -->
+        <link rel='stylesheet' href="{{url_for('static', filename='css/style.css')}}" defer></script>
+        <script src="{{url_for('static', filename='js/app.js')}}" defer></script>
+    </head>
+    <body>
+        <div class="container-fluid">
 
-  <!-- Plotly JS -->
-  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+            <!-- NAVIGATION BAR -->
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <a class="navbar-brand" href="#">Navbar</a>
+              
+                <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+                  <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                    <li class="nav-item active">
+                      <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Link</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                    </li>
+                  </ul>
+                  <form class="form-inline my-2 my-lg-0">
+                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                  </form>
+                </div>
+              </nav>
 
-  <!-- Custom CSS and JS -->
-  <!-- Defer the load of app.js so that the page 
-        can load first and then be processed by the script
-        (thanks Christina!)  -->
-  <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
-  <script src="{{ url_for('static', filename='js/app.js') }}" defer></script>
+              <!-- JUMBOTRON -->
+              <div class="jumbotron jumbotron-fluid">
+                <div class="container">
+                  <h1 class="display-4">Recruit and Retain</h1>
+                  <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+                </div>
+              </div>
 
-</head>
+              <!-- CAROUSEL -->
+              <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-ride="carousel" wrap="true" style="max-height: 400; height: 400px; width: auto;">
+                <ol class="carousel-indicators">
+                  <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+                  <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+                  <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner">
+                    <div class="carousel-item active" data-interval="3000">
+                        <img src="{{url_for('static', filename='images/two-people-meeting.jpg')}}" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block bg-dark" style='opacity: 0.5;'>
+                          <h5>Third slide label</h5>
+                          <p>Some representative placeholder content for the third slide.</p>
+                        </div>
+                      </div>    
+                    <div class="carousel-item" data-interval="3000">
+                    <img src="{{url_for('static', filename='images/decision-making.jpg')}}" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block bg-dark" style='opacity: 0.5;'>
+                      <h5>First slide label</h5>
+                      <p>Some representative placeholder content for the first slide.</p>
+                    </div>
+                  </div>
+                  <div class="carousel-item" data-interval="3000">
+                    <img src="{{url_for('static', filename='images/lunch-meeting.jpg')}}" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block bg-dark" style='opacity: 0.5;'>
+                      <h5>Second slide label</h5>
+                      <p>Some representative placeholder content for the second slide.</p>
+                    </div>
+                  </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Next</span>
+                </a>
+              </div>
+            
+            <!-- COMPANY OVERVIEW CARD -->
+              <div class="card text-white bg-dark">
+                <div class="card-body">
+                  <h5 class="card-title">Company Overview</h5>
+                  <p class="card-text">Some stuff here...</p>
+                </div>
+              </div>
 
-<body>
+            <!-- BAR AND GAUGE CHART ROW -->
+            <div class="row">
+                <div class="col-md-6">
+                    <div id='intro-bar-chart' style='height: 400px;'></div>
+                </div>
+                <div class="col-md-6">
+                    <div id='intro-gauge-chart'></div>
+                </div>
+            </div>
 
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12 jumbotron text-center">
-        <h1>Human Resources Analysis Dashboard</h1>
-        <p>Use the interactive charts below to explore the dataset</p>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-2">
-        <div class="well">
-          <h5>Test Subject ID No.:</h5>
-          <!-- YOU WILL NEED TO ADD AN onchange EVENT TO THE DROP DOWN! -->
-          <select id="selDataset" onchange = "optionChanged(this.value)"></select>
+            <!-- LINE GRAPH ROW -->
+            <div class="row">
+                <div class="col-md-12">
+                    <div id='intro-line-graph'></div>
+                </div>
+            </div>
+
+            <!-- SCATTER PLOT ROW -->
+            <div class="row">
+                <div class="col-md-12">
+                    <div id='intro-scatter-plot'></div>
+                </div>
+            </div>
         </div>
-        <div class="panel panel-primary">
-          <div class="panel-heading">
-            <h3 class="panel-title">Demographic Info</h3>
-          </div>
-          <div id="sample-metadata" class="panel-body"></div>
-        </div>
-      </div>
-      <div class="col-md-5">
-        <div id="bar"></div>
-      </div>
-      <div class="col-md-5">
-        <div id="gauge"></div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-12">
-        <div id="bubble"></div>
-      </div>
-    </div>
-  </div>
-  
-</body>
-
+    </body>
 </html>
