--- a/Submitted Version_Fraol/static/css/style.css
+++ b/Submitted Version_Fraol/static/css/style.css
@@ -1,7 +1,18 @@
+body {
+  background-color: black;
+}
+
 .carousel-item img {
     max-height: 400px;
     width: auto;
     min-width: auto;
     object-fit: cover;
+    
   }
- 
+
+  .{
+
+  }
+
+  
+  
